资源包/LabVIEW有用程序/例程DMC3000系列/VC.NET/例2_回原点运动/LTDMC.h

typedef unsigned long       DWORD;
typedef unsigned short      WORD;
//板卡配置	
DMC_API short __stdcall dmc_board_init(void); 	//初始化控制卡
DMC_API short __stdcall dmc_board_close(void);	//关闭控制卡
DMC_API short __stdcall dmc_board_reset(void); //硬件复位
DMC_API short __stdcall	dmc_get_CardInfList(WORD* CardNun,DWORD* CardTypeList,WORD* CardIdList);//读取初始化完成后的卡信息列表
DMC_API short __stdcall dmc_get_total_axes(WORD CardNo,DWORD *TotalAxis); 	//读取指定卡轴数
//3800专用 轴IO映射配置
DMC_API short __stdcall dmc_set_AxisIoMap(WORD CardNo,WORD Axis,WORD MsgType,WORD MapPortType,WORD MapPortIndex,DWORD Filter);
 
DMC_API short __stdcall dmc_get_AxisIoMap(WORD CardNo,WORD Axis,WORD MsgType,WORD* MapPortType,WORD* MapPortIndex,DWORD* Filter);
 
//以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
DMC_API short __stdcall dmc_set_axis_io_map(WORD CardNo,WORD Axis,WORD IoType,WORD MapIoType,WORD MapIoIndex,double filter_time);
DMC_API short __stdcall dmc_get_axis_io_map(WORD CardNo,WORD Axis,WORD IoType,WORD* MapIoType,WORD* MapIoIndex,double* filter_time);
DMC_API short __stdcall dmc_set_special_input_filter(WORD CardNo,double filter_time);//设置所有专用IO滤波时间
//下载参数文件
DMC_API short __stdcall dmc_download_configfile(WORD CardNo,const char *FileName);
//下载固件文件
DMC_API short __stdcall dmc_download_firmware(WORD CardNo,const char *FileName);
//限位/异常配置
DMC_API short __stdcall dmc_set_softlimit(WORD CardNo,WORD axis,WORD enable, WORD source_sel,WORD SL_action, long N_limit,long P_limit);	//设置软限位参数
DMC_API short __stdcall dmc_get_softlimit(WORD CardNo,WORD axis,WORD *enable, WORD *source_sel,WORD *SL_action,long *N_limit,long *P_limit);	//读取软限位参数
DMC_API short __stdcall dmc_set_el_mode(WORD CardNo,WORD axis,WORD el_enable,WORD el_logic,WORD el_mode); 	//设置EL信号
DMC_API short __stdcall dmc_get_el_mode(WORD CardNo,WORD axis,WORD *el_enable,WORD *el_logic,WORD *el_mode); 	//读取设置EL信号
DMC_API short __stdcall dmc_set_emg_mode(WORD CardNo,WORD axis,WORD enable,WORD emg_logic); 	//设置EMG信号
DMC_API short __stdcall dmc_get_emg_mode(WORD CardNo,WORD axis,WORD *enable,WORD *emg_logic); 	//读取设置EMG信号
//3800专用 外部减速停止信号及减速停止时间设置
DMC_API short __stdcall dmc_set_dstp_mode(WORD CardNo,WORD axis,WORD enable,WORD logic,DWORD time);
 	
DMC_API short __stdcall dmc_get_dstp_mode(WORD CardNo,WORD axis,WORD *enable,WORD *logic,DWORD *time);
 	
DMC_API short __stdcall dmc_set_dstp_time(WORD CardNo,WORD axis,DWORD time);
DMC_API short __stdcall dmc_get_dstp_time(WORD CardNo,WORD axis,DWORD *time);
//以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
DMC_API short __stdcall dmc_set_io_dstp_mode(WORD CardNo,WORD axis,WORD enable,WORD logic); //设置外部IO触发减速停止模式
DMC_API short __stdcall dmc_get_io_dstp_mode(WORD CardNo,WORD axis,WORD *enable,WORD *logic);
 	
DMC_API short __stdcall dmc_set_dec_stop_time(WORD CardNo,WORD axis,double  stop_time);//设置全局减速停止时间
DMC_API short __stdcall dmc_get_dec_stop_time(WORD CardNo,WORD axis,double * stop_time);
//速度设置		
DMC_API short __stdcall dmc_set_profile(WORD CardNo,WORD axis,double Min_Vel,double Max_Vel,double Tacc,double Tdec,double stop_vel);	//设定速度曲线参数
DMC_API short __stdcall dmc_get_profile(WORD CardNo,WORD axis,double *Min_Vel,double *Max_Vel,double *Tacc,double *Tdec,double *stop_vel);	//读取速度曲线参数
DMC_API short __stdcall dmc_set_s_profile(WORD CardNo,WORD axis,WORD s_mode,double s_para);	//设置平滑速度曲线参数
DMC_API short __stdcall dmc_get_s_profile(WORD CardNo,WORD axis,WORD s_mode,double *s_para);	//读取平滑速度曲线参数
DMC_API short __stdcall dmc_set_vector_profile_multicoor(WORD CardNo,WORD Crd, double Min_Vel,double Max_Vel,double Tacc,double Tdec=0,double Stop_Vel=0);
DMC_API short __stdcall dmc_get_vector_profile_multicoor(WORD CardNo,WORD Crd, double *Min_Vel,double *Max_Vel,double *Tacc,double *Tdec=NULL,double *Stop_Vel=NULL);
//运动模块脉冲模式		
DMC_API short __stdcall dmc_set_pulse_outmode(WORD CardNo,WORD axis,WORD outmode);	//设定脉冲输出模式
DMC_API short __stdcall dmc_get_pulse_outmode(WORD CardNo,WORD axis,WORD* outmode);	//读取脉冲输出模式
//单轴运动		
DMC_API short __stdcall dmc_pmove(WORD CardNo,WORD axis,long dist,WORD posi_mode);	//指定轴做定长位移运动
DMC_API short __stdcall dmc_vmove(WORD CardNo,WORD axis,WORD dir);	//指定轴做连续运动
//PVT运动
DMC_API short __stdcall dmc_PvtTable(WORD CardNo,WORD iaxis,DWORD count,double *pTime,long *pPos,double *pVel);
DMC_API short __stdcall dmc_PtsTable(WORD CardNo,WORD iaxis,DWORD count,double *pTime,long *pPos,double *pPercent);
DMC_API short __stdcall dmc_PvtsTable(WORD CardNo,WORD iaxis,DWORD count,double *pTime,long *pPos,double velBegin,double velEnd);
DMC_API short __stdcall dmc_PttTable(WORD CardNo,WORD iaxis,DWORD count,double *pTime,long *pPos);
DMC_API short __stdcall dmc_PvtMove(WORD CardNo,WORD AxisNum,WORD* AxisList);
//在线变位/变速
DMC_API short __stdcall dmc_reset_target_position(WORD CardNo,WORD axis,long dist,WORD posi_mode=0);	//运动中改变目标位置
DMC_API short __stdcall dmc_change_speed(WORD CardNo,WORD axis,double Curr_Vel,double Taccdec);	//在线改变指定轴的当前运动速度及加减速时间
DMC_API short __stdcall dmc_update_target_position(WORD CardNo,WORD axis,long dist,WORD posi_mode=0);	//强行改变目标位置
//直线插补		
DMC_API short __stdcall dmc_line_multicoor(WORD CardNo,WORD Crd,WORD axisNum,WORD *axisList,long *DistList,WORD posi_mode);	//指定轴直线插补运动
DMC_API short __stdcall dmc_arc_move_multicoor(WORD CardNo,WORD Crd,WORD *AxisList,long *Target_Pos,long *Cen_Pos,WORD Arc_Dir,WORD posi_mode);
//回零运动	
DMC_API short __stdcall dmc_set_home_pin_logic(WORD CardNo,WORD axis,WORD org_logic,double filter=0); 	//设置HOME信号
DMC_API short __stdcall dmc_get_home_pin_logic(WORD CardNo,WORD axis,WORD *org_logic,double *filter=NULL); 	//读取设置HOME信号	
DMC_API short __stdcall dmc_set_homemode(WORD CardNo,WORD axis,WORD home_dir,double vel_mode,WORD mode,WORD EZ_count=0);//设定指定轴的回原点模式
DMC_API short __stdcall dmc_get_homemode(WORD CardNo,WORD axis,WORD *home_dir, double *vel_mode,WORD *home_mode,WORD *EZ_count=NULL);//读取指定轴的回原点模式
DMC_API short __stdcall dmc_home_move(WORD CardNo,WORD axis);
//DMC3800专用 虚拟IO映射  用于读取滤波后的IO口电平状态
DMC_API short __stdcall dmc_set_io_map_virtual(WORD CardNo,WORD bitno,WORD MapIoType,WORD MapIoIndex,double Filter);
DMC_API short __stdcall dmc_get_io_map_virtual(WORD CardNo,WORD bitno,WORD* MapIoType,WORD* MapIoIndex,double* Filter);
DMC_API short __stdcall dmc_read_inbit_virtual(WORD CardNo,WORD bitno);