资源包/LabVIEW有用程序/例程DMC3000系列/VB6.0/例11_两轴高级轨迹规划PVT_VB/LTDMC.bas

Attribute VB_Name = "Module1"

Option Explicit
''''''''''''''''''''''''''''''''''  Leadshine technology  ''''''''''''''''''''''''
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'''                                 LTDMC V1.1 函数列表                           ''''
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
        '板卡配置
        Declare Function dmc_board_init Lib "LTDMC.dll" () As Integer           '初始化控制卡
        Declare Function dmc_board_close Lib "LTDMC.dll" () As Integer          '关闭控制卡
        Declare Function dmc_board_reset Lib "LTDMC.dll" () As Integer
        Declare Function dmc_get_CardInfList Lib "LTDMC.dll" (ByRef CardNum As Integer, ByRef CardTypeList As Long, ByRef CardIdList As Integer) As Integer '获取所有卡号
        Declare Function dmc_get_card_version Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef CardVersion As Long) As Integer     '读取控制卡硬件版本
        Declare Function dmc_get_card_soft_version Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef FirmID As Long, ByRef SubFirmID As Long) As Integer           '读取控制卡硬件的固件版本
        Declare Function dmc_get_card_lib_version Lib "LTDMC.dll" (ByRef LibVer As Long) As Integer       '读取控制卡动态库版本
        Declare Function dmc_get_total_axes Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef TotalAxis As Long) As Integer         '读取指定卡轴数
        
        '3800,3600,5800,5600专用 轴IO映射配置
        Declare Function dmc_set_AxisIoMap Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal MsgType As Integer, ByVal MapPortType As Integer, ByVal MapPortIndex As Integer, ByVal Filter As Long) As Integer
        Declare Function dmc_get_AxisIoMap Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal MsgType As Integer, ByRef MapPortType As Integer, ByRef MapPortIndex As Integer, ByRef Filter As Long) As Integer
        '以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
        Declare Function dmc_set_axis_io_map Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal IoType As Integer, ByVal MapIoType As Integer, ByVal MapIoIndex As Integer, ByVal Filter As Double) As Integer
        Declare Function dmc_get_axis_io_map Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal IoType As Integer, ByRef MapIoType As Integer, ByRef MapIoIndex As Integer, ByRef Filter As Double) As Integer
        Declare Function dmc_set_special_input_filter Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal filter_time As Double) As Integer      '设置所有专用IO滤波时间
        
        'DMC5800专用 虚拟IO映射  用于读取滤波后的IO口电平状态
        Declare Function dmc_set_io_map_virtual Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal MapIoType As Integer, ByVal MapIoIndex As Integer, ByVal Filter As Double) As Integer
        Declare Function dmc_get_io_map_virtual Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByRef MapIoType As Integer, ByRef MapIoIndex As Integer, ByRef Filter As Double) As Integer
        Declare Function dmc_read_inbit_virtual Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer) As Integer
        
        '下载参数文件
        Declare Function dmc_download_configfile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal FileName As String) As Integer
        '下载固件文件
        Declare Function dmc_download_firmware Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal FileName As String) As Integer
        '限位/异常设置
        Declare Function dmc_set_softlimit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal source_sel As Integer, ByVal SL_action As Integer, ByVal N_limit As Long, ByVal P_limit As Long) As Integer  '设置软限位参数
        Declare Function dmc_get_softlimit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef source_sel As Integer, ByRef SL_action As Integer, ByRef N_limit As Long, ByRef P_limit As Long) As Integer    '读取软限位参数
        Declare Function dmc_set_el_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal el_enable As Integer, ByVal el_logic As Integer, ByVal el_mode As Integer) As Integer      '设置EL信号
        Declare Function dmc_get_el_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef el_enable As Integer, ByRef el_logic As Integer, ByRef el_mode As Integer) As Integer   '读取设置EL信号
        Declare Function dmc_set_emg_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal emg_logic As Integer) As Integer    '设置EMG信号
        Declare Function dmc_get_emg_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enbale As Integer, ByRef emg_logic As Integer) As Integer        '读取设置EMG信号
        '3800,3600,5800,5600专用 外部减速停止信号及减速停止时间配置
        Declare Function dmc_set_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal logic As Integer, ByVal time As Long) As Integer
        Declare Function dmc_get_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef logic As Integer, ByRef time As Long) As Integer
        Declare Function dmc_set_dstp_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef time As Long) As Integer
        Declare Function dmc_get_dstp_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef time As Long) As Integer
        '以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
        Declare Function dmc_set_io_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal logic As Integer) As Integer
        Declare Function dmc_get_io_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef logic As Integer) As Integer
        Declare Function dmc_set_dec_stop_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef stop_time As Double) As Integer
        Declare Function dmc_get_dec_stop_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef stop_time As Double) As Integer
        
        '速度设置
        Declare Function dmc_set_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Min_Vel As Double, ByVal Max_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal Stop_vel As Double) As Integer '设定速度曲线参数
        Declare Function dmc_get_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef Min_Vel As Double, ByRef Max_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double, ByRef Stop_vel As Double) As Integer '读取速度曲线参数
        Declare Function dmc_set_s_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal s_mode As Integer, ByVal s_para As Double) As Integer        '设置平滑速度曲线参数
        Declare Function dmc_get_s_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal s_mode As Integer, ByRef s_para As Double) As Integer    '读取平滑速度曲线参数
        Declare Function dmc_set_vector_profile_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal Min_Vel As Double, ByVal Max_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal Stop_vel As Double) As Integer
        Declare Function dmc_get_vector_profile_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef Min_Vel As Double, ByRef Max_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double, ByRef Stop_vel As Double) As Integer
        
        '运动模块脉冲模式
        Declare Function dmc_set_pulse_outmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal outmode As Integer) As Integer    '设定脉冲输出模式
        Declare Function dmc_get_pulse_outmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef outmode As Integer) As Integer      '读取脉冲输出模式

        '单轴运动
        '点位运动
        Declare Function dmc_pmove Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Long, ByVal posi_mode As Integer) As Integer  '指定轴做定长位移运动
        Declare Function dmc_reset_target_position Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Long, ByVal posi_mode As Integer) As Integer  '运动中改变目标位置
        Declare Function dmc_change_speed Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Curr_Vel As Double, ByVal Taccdec As Double) As Integer        '在线改变指定轴的当前运动速度
        Declare Function dmc_update_target_position Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Long, ByVal posi_mode As Integer) As Integer  '强行改变目标位置
        'JOG运动
        Declare Function dmc_vmove Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal dir As Integer) As Integer    '指定轴做连续运动
        'PVT运动
        Declare Function dmc_PvtTable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Long, ByRef pVel As Double) As Integer
        Declare Function dmc_PtsTable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Long, ByRef pPercent As Double) As Integer
        Declare Function dmc_PvtsTable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Long, ByVal velBegin As Double, ByVal velEnd As Double) As Integer
        Declare Function dmc_PttTable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Long) As Integer
        Declare Function dmc_PvtMove Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer) As Integer
        
        '多轴运动
        '直线插补
        Declare Function dmc_line_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef DistList As Long, ByVal posi_mode As Integer) As Integer     '指定轴直线插补运动
        '平面圆弧
        Declare Function dmc_arc_move_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef AxisList As Integer, ByRef target_Pos As Long, ByRef cen_Pos As Long, ByVal arc_dir As Integer, ByVal posi_mode As Integer) As Integer
   
        '回零运动
        Declare Function dmc_set_home_pin_logic Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal org_logic As Integer, ByVal Filter As Double) As Integer         '设置HOME信号
        Declare Function dmc_get_home_pin_logic Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef org_logic As Integer, ByRef Filter As Double) As Integer     '读取设置HOME信号
        Declare Function dmc_set_homemode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal home_dir As Integer, ByVal vel_mode As Double, ByVal mode As Integer, ByVal EZ_count As Integer) As Integer '设定指定轴的回原点模式
        Declare Function dmc_get_homemode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef home_dir As Integer, ByRef vel_mode As Double, ByRef home_mode As Integer, ByRef EZ_count As Integer) As Integer '读取指定轴的回原点模式
        Declare Function dmc_home_move Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
        '3410专用 回原点中的减速信号
        Declare Function dmc_set_sd_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal sd_logic As Integer, ByVal sd_mode As Integer) As Integer      '设置SD信号
        Declare Function dmc_get_sd_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef sd_logic As Integer, ByRef sd_mode As Integer) As Integer    '读取设置SD信号
